--- a/NonYeZhiChuang/app/src/main/res/layout/wedget_gouwuche.xml
+++ b/NonYeZhiChuang/app/src/main/res/layout/wedget_gouwuche.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="horizontal" android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <Button
         android:id="@+id/jia"
@@ -12,8 +12,8 @@
     <TextView
         android:id="@+id/wedget_showNumber"
         android:text="0"
-        android:layout_width="50dp"
-        android:textSize="30sp"
+        android:layout_width="wrap_content"
+
         android:layout_height="wrap_content" />
 
     <Button
