--- a/NonYeZhiChuang/app/src/main/res/layout/adapter_fenlei.xml
+++ b/NonYeZhiChuang/app/src/main/res/layout/adapter_fenlei.xml
@@ -5,11 +5,11 @@
     android:layout_gravity="left"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="30dp">
     <TextView
         android:text="分类"
         android:gravity="left"
-        android:textSize="14sp"
+        android:textSize="16sp"
         android:id="@+id/mTxt_fenlei"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
