--- a/NonYeZhiChuang/app/src/main/res/layout/activity_main.xml
+++ b/NonYeZhiChuang/app/src/main/res/layout/activity_main.xml
@@ -4,13 +4,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
+    android:clipToPadding="true"
+    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    android:background="@color/colorAccent"
     tools:context="com.example.administrator.nonyezhichuang.MainActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
+        android:background="#bbbbbb"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
@@ -18,10 +21,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </android.support.v7.widget.Toolbar>
-
-
-
-
 
 
     <com.example.administrator.nonyezhichuang.wedget.MyScrollView
