--- a/NonYeZhiChuang/app/src/main/res/layout/adapter_zhuye.xml
+++ b/NonYeZhiChuang/app/src/main/res/layout/adapter_zhuye.xml
@@ -3,6 +3,7 @@
     android:layout_marginRight="10dp"
     android:layout_marginBottom="10dp"
     android:gravity="center"
+    android:background="#fff"
     android:layout_gravity="center"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
@@ -19,7 +20,7 @@
         android:layout_marginTop="5dp"
         android:id="@+id/mTxt_name"
         android:text="排骨动画"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:layout_below="@id/mImg_zhuye"
         android:layout_width="165dp"
         android:layout_height="20dp" />
